syntax = "proto3";

option csharp_namespace = "grpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply); // Unary
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply); // server streaming
  rpc SayHelloStream_useCt (HelloRequest) returns (stream HelloReply); // server streaming



  rpc SayHelloFromClient (stream HelloRequest) returns (HelloReply); // client streaming
  rpc StreamingBothWays(stream HelloRequest) returns (stream HelloReply); // bi-directional streaming
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


